# bifrost2

./: .gitignore  README.md  example.py  post-install-hook.py  pyproject.toml
.github/workflows/: hello-world.yml  run-tests.yml
dcp/: __init__.py  initialization.py  sanity.py
dcp/api/: __init__.py  add_slices.py  compute_do.py  compute_for.py  fetch_results.py  job.py  job_env.py  job_fs.py  job_modules.py  job_serializers.py  jobfs.py  pyodide_work_function.py  result_handle.py
dcp/dcp_client_js/: __init__.py  load_dcp_client.py  package-lock.json  package.json
dcp/dry/: __init__.py  aio.py  bfclass.py  class_manager.py  class_registry.py  classes.py  fn.py  package.json
dcp/js/: __init__.py  load_dcp_client.py  package-lock.json  package.json  utils.py
dcp/js_wrappers/: __init__.py  js_object.py
dcp/resources/: __init__.py
examples/: async-simple-job-deploy.py  job-args.py  jobfs-job-deploy.py  map-basic-job-deploy.py  numpy-matrix.py  open-jobs-job-deploy.py  remote-data-job-deploy.py  simple-job-deploy.py
tests/: loop.sh  test_init.py  test_insanity.py  test_sanity.py
tests/test_api/: test_compute_for.py  test_job.py  test_job_fs.py  test_job_serializers.py  test_jobfs.py  test_misc_api_existence.py  test_wallet.py
tests/test_js_wrappers/: test_class_registry.py  test_js_object.py  test_object_wrapper.py  test_wrapping_on_proxy.py
will/: 01-simple.py  02.py  03-pythonic.py  04-pythonic.py  05-pythonic.py  06-pythonic.py  job-launch-pyodide.py
