[tool.poetry]
name = "dcp"
version = "2.0.5"
description = "A DCP SDK"
authors = [
    "Distributive <info@distributive.network>",
    "Will Pringle <will@distributive.network>",
]
license = "MIT"
repository = "https://github.com/Distributive-Network/bifrost2"
packages = [
    { include = "dcp" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
cloudpickle = "2.2.1"
dill = "0.3.8"
pythonmonkey = ">=0.7.1"
numpy = [
    {version = "~1.24", python = "<3.9"},
    {version = "^2.0", python = ">=3.9"}
]
nest_asyncio = '^1.6.0'

[tool.poetry.build]
script = "post-install-hook.py"
generate-setup-file = false

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"

